# PCS2021

./: README.md
6_ComputationalGeometry/: README.md
6_ComputationalGeometry/Exercise_1/: .gitignore  README.md
6_ComputationalGeometry/Exercise_1/C++/: .gitignore  CMakeLists.txt  Intersector1D1D.cpp  Intersector1D1D.h  main.cpp  test_intersector1D1D.h
6_ComputationalGeometry/Exercise_1/Images/: intersector.md
6_ComputationalGeometry/Exercise_2/: README.md
6_ComputationalGeometry/Exercise_2/C++/: CMakeLists.txt  Intersector2D1D.cpp  Intersector2D1D.h  Intersector2D2D.cpp  Intersector2D2D.h  main.cpp  test_intersector2D1D.h  test_intersector2D2D.h  text.txt
6_ComputationalGeometry/Exercise_2/Images/: intersector2D1D.md  intersector2D2D.md
7_Maintenance/Exercise_1/: README.md
7_Maintenance/Exercise_1/C++/: IBookStoreApp.cpp  IBookStoreApp.hpp  main.cpp
7_Maintenance/Exercise_1/Images/: books_cd.md
7_Maintenance/Exercise_1/Python/: main.py  test_main.py
7_Maintenance/Exercise_1/Solution/C++/: CMakeLists.txt  IBookStoreApp.cpp  test_bookstore.h
7_Maintenance/Exercise_1/Solution/Python/: main.py
7_Maintenance/Exercise_2/: README.md
7_Maintenance/Exercise_2/C++/: CMakeLists.txt  GeometryFactory.cpp  GeometryFactory.h  main.cpp  test_geometryFactory.h
7_Maintenance/Exercise_2/Images/: geometry.md
7_Maintenance/Exercise_2/Python/: main.py  test_main.py
8_EmptyProjects/: README.md
8_EmptyProjects/Exercise_1/: README.md
8_EmptyProjects/Exercise_1/C++/: CMakeLists.txt  main.cpp
8_EmptyProjects/Exercise_1/C++/src/: EmptyClass.cpp
8_EmptyProjects/Exercise_1/C++/test/: test_emptyclass.hpp
8_EmptyProjects/Exercise_1/Images/: empty_cd.md
8_EmptyProjects/Exercise_1/Python/: main.py
8_EmptyProjects/Exercise_1/Python/src/: __init__.py  empty_class.py
8_EmptyProjects/Exercise_1/Python/test/: test_empty_class.py
Projects/: README.md
Projects/Project_1/: README.md
Projects/Project_1/Images/: use_cases.md
